# HelpDesk-RAG-Chatbot

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: human_agent.py
app/api/: agent.py  route.py
app/core/: bm25.py  document_service.py  embeddings.py  llm.py  loader.py  reranker.py  semantic_cache.py  splitter.py
app/db/: chromaDB.py
app/utils/: validations.py
human-agent-demo/: package-lock.json
human-agent-demo/human-agent/: package-lock.json  package.json
human-agent-demo/human-agent/app/: page.tsx
human-agent-demo/human-agent/app/api/escalations/: route.ts  store.ts
human-agent-demo/human-agent/app/api/escalations/[id]/: route.ts
human-agent/app/: layout.tsx  page.tsx
human-agent/app/api/escalations/[id]/: route.ts
human-agent/app/chat/: page.tsx
human-agent/app/components/: app-shell.tsx  sidebar.tsx
human-agent/app/documents/: page.tsx
human-agent/app/history/: page.tsx
human-agent/app/query/: page.tsx
storage/: test.txt
